# KeyDash_NX1000

./: .clang-format  .gitignore  CMakeLists.txt  FileReader.h  Main.qml  README.md  SECURITY.md  crashlog.cpp  crashlog.h  dashmodel.cpp  dashmodel.h  ecu_reader.cpp  ecu_reader.h  ecu_reader.h.bak  main.cpp  serialworker.cpp  serialworker.h
components/: LeftInfoColumn.qml  LogReplayController.qml
controllers/: connection_controller.cpp  connection_controller.h  io_bridge.cpp  io_bridge.h  telemetry_router.cpp  telemetry_router.h
core/: ecu_manager.cpp  ecu_manager.h  iecuprotocol.h  itransport.h  signal_types.h
docs/: Errors.md  FAQ.md  FirstBoot.md  Glossary.md  Navigation.md  SUMMARY.md  Setup.md  Troubleshooting.md
docs/customization/: Customization.md  Overlays.md  Preferences.md
docs/tabs/: Device.md  Display.md  Gauges.md  Performance.md  Tachometer.md
errors/: Errors.js
pages/: DashboardPage.qml  ReplayPage.qml  ServicePage.qml  servicepage.cpp  servicepage.h
proto/: version1_218.xml
protocols/: demo_protocol.cpp  demo_protocol.h  ecumaster_classic.cpp  ecumaster_classic.h  obd2_elm327.cpp  obd2_elm327.h
shaders/: gear_tint.frag
style/: ThemedButton.qml  ThemedSlider.qml  ThemedSwitch.qml
theme/: Theme.qml
transports/: can_transport.cpp  can_transport.h  serial_transport.cpp  serial_transport.h
